# Aviation-Inventory-Pricing-Intelligence-Using-CatBoost-LightGBM-MLP

./: .env.example  .gitignore  DAILY_PROGRESS_TRACKING.md  FRONTEND_INTEGRATION_STATUS.md  IMPROVEMENTS_STATUS_SUMMARY.md  IMPROVEMENT_PRIORITIES.md  IMPROVEMENT_VERIFICATION_REPORT.md  LICENSE  NEXT_PHASE_IMPROVEMENTS.md  OPERATIONS_RUNBOOK.md  PHASE2_INTEGRATION_STATUS.md  PROJECT_CONTEXT.md  PROJECT_DECISIONS.md  QUICK_INTEGRATION_CHECKLIST.md  README.md  SETUP_QUICKSTART.md  SYSTEM_IMPROVEMENT_ROADMAP.md  alembic.ini  comparison_engine.py  db.py  generate_reports.py  generate_route_flight_fare_monitor.py  hourly_change_report_v5.py  launcher.py  predict_next_day.py  pyproject.toml  requirements-lock.txt  requirements.txt  run_all.py  run_pipeline.py  setup_env.ps1  test_cookies.py  test_requester.py
.githooks/: pre-commit
.qwen/: settings.json
alembic/: env.py
config/: TRIP_PROFILE_GUIDE.md  airlines.json  airport_countries.json  airport_timezones.json  baggage_firsttrip.json  baggage_reference.json  dates.json  discount_manual_overrides.json  fleet_capacity_sources.json  holiday_calendar.json  market_priors.json  model_config_overrides.json  ota_discount_channels.json  route_characteristics.json  route_trip_windows.json  routes.json  schedule.json  source_switches.json
cookies/: README.md
core/: atomic_write.py  booking_curve_features.py  cookies.py  explainability.py  extraction_health.py  holiday_features.py  imputation.py  offer_identity.py  prediction_monitor.py  retry_policy.py  route_characteristics.py  runtime_config.py  scheduler_timing.py  (+5 more)
(+469 files in other folders)
